# ChemEagle

./: .gitignore  MANIFEST.in  __init__.py  main.py  pyproject.toml
molnextr/: chemistry.py  constants.py
