[project]
name = "chemeagle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "albumentations==1.1.0",
    "chemrxnextractor",
    "easyocr",
    "ipython",
    "layoutparser",
    "matplotlib",
    "numpy",
    "opennmt-py==2.2.0",
    "pillow",
    "pycocotools",
    "pydantic",
    "pypdf2",
    "rdkit",
    "smilespe",
    "timm==0.4.9",
    "transformers>=4.49.0",
]

[tool.uv.sources]
chemrxnextractor = { git = "https://github.com/Reina234/ChemRxnExtractor.git" }
